--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "iOS Conf SG 2019"
 email: "subh@iosconf.sg"
 description: "The largest iOS developer conference in Southeast Asia."
-baseurl: "/zeppelin"
+baseurl: "/iosconfsg"
 url: "http:iosconf.sg"
 permalink: "/blog/:title"
 
@@ -40,10 +40,12 @@ navigationLinks:
  - {permalink: "/", text: "Home"}
  - {permalink: "/schedule/", text: "Schedule"}
  - {permalink: "/speakers/", text: "Speakers"}
- - {permalink: "/team/", text: "Team"}
+ - {permalink: "/#sponsors", text: "Sponsors"}
+ - {permalink: "/#venue", text: "Venue"}
  - {permalink: "/workshop/", text: "Workshop"}
+ - {permalink: "/team/", text: "Team"}
 rightNavigationButtons:
- - {link: "https://bit.ly/dfua-c4p", text: "Buy Tickets"}
+ - {link: "https://ti.to/iosconfsg/2019", text: "Buy Tickets"}
 
 # Hero Block
 heroImage: "hero.jpg"
@@ -80,17 +82,14 @@ rockstarSpeakersButtonText: "See all speakers"
 # Location Block
 locationBlockTitle: "Conference Venue"
 eventLocationName: "Matrix at Biopolis"
-eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
+eventLocationLink: "http://www.jtc.gov.sg/industrial-land-and-space/pages/biopolis.aspx"
 eventStreetAddress: "30 Biopolis Street, Singapore 138671"
 eventAddressLocalityRegion: "Singapore"
 eventPostalCode: "138671"
-eventAddressCountry: "138671"
-eventStartTime: "2014-10-25T10:00"
-eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+eventAddressCountry: "Singapore"
+eventPlaceCoordinates: "1.304120, 103.791770"
+mapCenterCoordinates: "1.304120, 103.791770"
+mapMobileCenterCoordinates: "1.304120, 103.791770"
 
 # Venue Block
 venueBlockTitle: "Venue"
@@ -98,14 +97,13 @@ venueBigImage: "venue_0.jpg"
 venueSmallImage1: "venue_1.jpg"
 venueSmallImage2: "venue_2.jpg"
 venueSmallImage3: "venue_3.jpg"
-venueTitle: "Kinopalace Cinema"
-venueFeatures: ["3 huge cinema screens", "Doulby Digital Surround EX audio system", "Located directly in the city center"]
+venueTitle: "Matrix at Biopolis"
+venueFeatures: ["30 Biopolis Street", "Singapore - 138671", "Near Buona Vista MRT"]
 
 # Tweets Feed Block
 tweetsFeedImage: "twitter-feed.jpg"
 tweetsFeedTitle: "What's Up?"
 twitterHashTag: "iOSConfSG"
-twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
 # Partners Block
 organizersTitle: "Sponsors"
@@ -128,6 +126,7 @@ footerBlocks:
  -
   title: "FAQ"
   links:
+   - {permalink: "/faq/", text: "Frequently Asked Questions"}
    - {permalink: "/cod/", text: "Code of Conduct"}
 
 # Blog
