Update details for conference

--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,8 @@ heroButtons:
 # About Block
 aboutTitle: "About iOS Conf SG"
 aboutBlock:
- - {title: "Conference", image: "conference.jpg", text: "Two full days - single-track - conference featuring 20+ pure iOS and Swift programming talks." }
- - {title: "Workshops", image: "workshop.jpg", text: "1 full day workshop and hands-on experience on advanced debugging and iOS application architecture for future." }
+ - {title: "Conference", image: "conference.png", text: "18th and 19th January - 2 full days - single-track - conference featuring 20+ pure iOS and Swift programming talks." }
+ - {title: "Workshops", image: "workshop.png", text: "17th January - 1 full day workshop and hands-on experience on modern application architecture and improving iOS app performance. ." }
 
 # Statistic Block
 statisticBlockImage: "statistic.jpg"
