--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -36,11 +36,9 @@ Daniel presents iPhone, Cocoa, and Swift training and consults through his compa
     - {name: "twitter", link: "https://twitter.com/khanlou"}
 - 
   id: 4
-  name: "Greg"
+  name: "Yasuhiro"
   surname: "Heo"
-  company: "swiftunboxed.com"
-  bio: "Greg is a former full-time trainer and video maker on the raywenderlich.com team. He has been nerding out with computers since the Commodore 64 era in the 80s and continues to this day on the web and on iOS. He likes caffeine, codes with two-space tabs, and writes with semicolons. You can find Greg on Twitter, his personal site, or Swift Unboxed where he writes about Swift."
-  thumbnailUrl: greg.jpg
-  rockstar: true
+  company: "CyberAgent, Inc"
+  bio: "While creating iPhone apps such as messenger, camera, news app in his work, he also spends time on making open source projects using Swift and Haskell. You can find him at GitHub: https://github.com/inamiy"
   social: 
-    - {name: "twitter", link: "https://twitter.com/gregheo"}
+    - {name: "twitter", link: "https://twitter.com/inamiy"}
