--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -40,7 +40,7 @@ Daniel presents iPhone, Cocoa, and Swift training and consults through his compa
   surname: "Heo"
   company: "CyberAgent, Inc"
   bio: "While creating iPhone apps such as messenger, camera, news app in his work, he also spends time on making open source projects using Swift and Haskell. You can find him at GitHub: https://github.com/inamiy"
-  thumbnailUrl: yasuhiro.jpg  
+  thumbnailUrl: yasuhiro.jpeg  
   rockstar: true
   social: 
     - {name: "twitter", link: "https://twitter.com/inamiy"}
