--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -37,7 +37,7 @@ Daniel presents iPhone, Cocoa, and Swift training and consults through his compa
 - 
   id: 4
   name: "Yasuhiro"
-  surname: "Heo"
+  surname: "Inami"
   company: "CyberAgent, Inc"
   bio: "While creating iPhone apps such as messenger, camera, news app in his work, he also spends time on making open source projects using Swift and Haskell. You can find him at GitHub: https://github.com/inamiy"
   thumbnailUrl: yasuhiro.jpg  
