--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "iOS Conf SG 2019"
 email: "subh@iosconf.sg"
 description: "The largest iOS developer conference in Southeast Asia."
-baseurl: "/iosconfsg-website"
+baseurl: ""
 url: "http:iosconf.sg"
 permalink: "/blog/:title"
 
