Fix typo on Subh’s title in team page

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,7 +2,7 @@
   id: 0
   name: "Subhransu"
   surname: "Behera"
-  title: "Conference Origanizer"
+  title: "Conference Lead"
   thumbnailUrl: subhransu.jpeg
   team: true
   ribbon: 
