Update conference Schedule

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -126,7 +126,7 @@ Daniel presents iPhone, Cocoa, and Swift training and consults through his compa
   name: "Vincent"
   surname: "Pradeilles"
   company: "worldline.com"
-  bio: "Vincent is a french iOS software engineer. He works for equensWorldline, in Lyon."
+  bio: "Vincent is a french iOS software engineer. He works for Worldline, in Lyon."
   thumbnailUrl: vincent.jpg
   rockstar: false
   social: 
