Update Workshop Venue

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ rockstarSpeakersTitle: "Speakers"
 rockstarSpeakersButtonText: "See all speakers"
 
 # Location Block
-locationBlockTitle: "Conference Venue"
+locationBlockTitle: "Conference Venue on 18th and 19th"
 eventLocationName: "Matrix at Biopolis"
 eventLocationLink: "http://www.jtc.gov.sg/industrial-land-and-space/pages/biopolis.aspx"
 eventStreetAddress: "30 Biopolis Street, Singapore 138671"
